# QUIZ-DEVOP-2025

./: .env  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/pages/: Home.jsx  QuizPage.jsx
monitoring/: prometheus.yml
proxy/: default.conf
server/: Dockerfile  db.js  dockerfile  package-lock.json  package.json  pyproject.toml  seed.js  server.js  test-db.js
server/controllers/: quizController.js  quizRoutes.js
server/models/: Answer.js  Question.js  index.js
server/quiz/: admin.py  models.py  test_utils.py  urls.py  views.py
server/quiz/migrations/: 0001_initial.py
server/routes/: quizRoutes.js
server/server_config/: asgi.py  settings.py  urls.py  wsgi.py
